--- a/blocks/footer/__text/footer__text.css
+++ b/blocks/footer/__text/footer__text.css
@@ -8,3 +8,15 @@
   font-style: normal;
   color: #6b7b8c;
 }
+
+@media screen and (max-width: 821px) {
+  .footer__text {
+    font-size: 1.7rem;
+  }
+}
+
+@media screen and (max-width: 584px) {
+  .footer__text {
+    font-size: 1.2rem;
+  }
+}
