--- a/blocks/accordeon/__image/accordeon__image.css
+++ b/blocks/accordeon/__image/accordeon__image.css
@@ -12,6 +12,12 @@
 @media (hover: hover) {
   .accordeon__content:hover > .accordeon__image {
     max-height: 100vh;
-    transition: max-height 1s ease-in-out;
+    transition: max-height 2s cubic-bezier(0, 1, 0, 1);
+  }
+}
+
+@media screen and (max-width: 821px) {
+  .accordeon__image {
+    max-width: 90%;
   }
 }
