--- a/blocks/accordeon/__content/accordeon__content.css
+++ b/blocks/accordeon/__content/accordeon__content.css
@@ -10,3 +10,9 @@
   border-top: 0.1rem solid #ef9d10;
   cursor: pointer;
 }
+
+@media (hover: hover) {
+  .accordeon__content {
+    cursor: pointer;
+  }
+}
